--- a/action.yml
+++ b/action.yml
@@ -51,7 +51,11 @@ runs:
       run: |
         git config --global user.name ${{ inputs.user }}
         git config --global user.email ${{ inputs.email }}
-        sh tag-for-release.bash
+        
+        git clone https://github.com/QubitPi/maven-central-release-action.git ../maven-central-release-action
+        cp ../maven-central-release-action/tag-for-release.bash .github/
+        cp ../maven-central-release-action/upversion.py .github/
+        .github/tag-for-release.bash
       shell: bash
 
     - name: Set up Java
