--- a/action.yml
+++ b/action.yml
@@ -19,14 +19,19 @@ branding:
   color: "green"
 
 inputs:
+  java-version:
+    description: JDK version. Default to 17
+    required: false
+    default: '17'
+  distribution:
+    description: Java distribution. Default to adopt
+    required: false
+    default: 'adopt'
   user:
     description: The username of the GitHub user who has write access to push tags
     required: true
   email:
     description: The emails linked to the user on GitHub
-    required: true
-  server-id:
-    description: ID of the distributionManagement repository in the pom.xml file
     required: true
   gpg-private-key:
     description: GPG private key to import
@@ -61,9 +66,9 @@ runs:
     - name: Set up Java
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
-        distribution: 'adopt'
-        server-id: ${{ inputs.server-id }}
+        java-version: ${{ inputs.java-version }}
+        distribution: ${{ inputs.distribution }}
+        server-id: ossrh
         settings-path: ${{ github.workspace }}
         gpg-private-key: ${{ inputs.gpg-private-key }}
         gpg-passphrase: ${{ inputs.gpg-passphrase }}
@@ -83,7 +88,7 @@ runs:
         servers: >
           [
             {
-              "id": "${{ inputs.server-id }}",
+              "id": "ossrh",
               "username": "${{ inputs.server-username }}",
               "password": "${{ inputs.server-password }}",
               "passphrase": "${{ inputs.gpg-passphrase }}"
@@ -92,9 +97,9 @@ runs:
         profiles: >
           [
             {
-              "id": "${{ inputs.server-id }}",
+              "id": "ossrh",
               "properties": {
-                "gpg.keyname": "${{ inputs.server-id }}"
+                "gpg.keyname": "ossrh"
               },
               "activation": {
                 "activeByDefault": "true"
