--- a/action.yml
+++ b/action.yml
@@ -67,9 +67,9 @@ runs:
         git config --global user.name ${{ inputs.user }}
         git config --global user.email ${{ inputs.email }}
 
-        git clone https://github.com/QubitPi/hashicorp-aws.git ../hashicorp-aws
-        cp ../hashicorp-aws/.github/version-bump/tag-for-release.bash .github/
-        cp ../hashicorp-aws/.github/version-bump/upversion.py .github/
+        git clone https://github.com/QubitPi/hashistack.git ../hashistack
+        cp ../hashistack/.github/version-bump/tag-for-release.bash .github/
+        cp ../hashistack/.github/version-bump/upversion.py .github/
         .github/tag-for-release.bash
       shell: bash
 
