Fix 'File not found' error

--- a/action.yml
+++ b/action.yml
@@ -66,6 +66,10 @@ runs:
       run: |
         git config --global user.name ${{ inputs.user }}
         git config --global user.email ${{ inputs.email }}
+
+        git clone https://github.com/QubitPi/maven-central-release-action.git ../maven-central-release-action
+        cp ../maven-central-release-action/.github/tag-for-release.bash .github/
+        cp ../maven-central-release-action/.github/upversion.py .github/
         .github/tag-for-release.bash
       shell: bash
 
